# Urban-SemSeg

./: .gitignore  .gitmodules  README.md  build.sh  dir.bat  run.bat  run.sh  run_ransac.ps1  run_ransac_all.ps1
.github/workflows/: windows.yml
data/: polysoup-church.stl
src/: CMakeLists.txt
src/bsp/: CMakeLists.txt  main.cpp
src/bsp/point-cloud/: bsp.cpp  bsp.h  bsp_cell.h  pc_bsp.cpp  pc_bsp.h  pc_tiling.cpp  pc_tiling.h  write_las.cpp  write_las.h  write_xyz.cpp  write_xyz.h
src/fitting_region_growing/: CMakeLists.txt  main-fit-cylinder.cpp  main-fit.cpp  main-ransac.cpp  main-scanline-normals.cpp
src/ransac/: CMakeLists.txt  main.cpp  pc_reader.cpp  pc_reader.h
